Update example app

--- a/matching_semantics.html
+++ b/matching_semantics.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="_static/waypoints.min.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="top" title="Lazorse 0.5.0 documentation" href="index.html" />
-    <link rel="prev" title="API documentation" href="api.html" /> 
+    <link rel="prev" title="Upgrading from earlier versions" href="upgrading.html" /> 
   </head>
   <body>  
       <div class="sphinxsidebar">
