--- a/api.html
+++ b/api.html
@@ -28,7 +28,7 @@
     <script type="text/javascript" src="_static/waypoints.min.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
     <link rel="top" title="Lazorse 0.5.0 documentation" href="index.html" />
-    <link rel="next" title="URI Template matching" href="matching_semantics.html" />
+    <link rel="next" title="Upgrading from earlier versions" href="upgrading.html" />
     <link rel="prev" title="Guide" href="guide.html" /> 
   </head>
   <body>  
