--- a/upgrading.html
+++ b/upgrading.html
@@ -27,7 +27,9 @@
     <script type="text/javascript" src="_static/doctools.js"></script>
     <script type="text/javascript" src="_static/waypoints.min.js"></script>
     <script type="text/javascript" src="_static/sidebar.js"></script>
-    <link rel="top" title="Lazorse 0.5.0 documentation" href="index.html" /> 
+    <link rel="top" title="Lazorse 0.5.0 documentation" href="index.html" />
+    <link rel="next" title="URI Template matching" href="matching_semantics.html" />
+    <link rel="prev" title="API documentation" href="api.html" /> 
   </head>
   <body>  
       <div class="sphinxsidebar">
